--- a/microservice-contrat.properties
+++ b/microservice-contrat.properties
@@ -6,4 +6,4 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ref_contrat_db?serverTimezone=Europe/Paris&zeroDateTimeBehavior=CONVERT_TO_NULL
 spring.datasource.username=user-contrat
 spring.datasource.password=root
-urbanisation-si.clairprev.limiteContrat=3
+urbanisation-si.clairprev.limiteNombreContrat=3
