--- a/microservice-assure.properties
+++ b/microservice-assure.properties
@@ -1,4 +1,4 @@
-spring.application.name=microservice-assure
+# spring.application.name=microservice-assure
 server.port=9999
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -7,5 +7,5 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/previt_db?server
 spring.datasource.username=gpdc_marie
 spring.datasource.password=root
 urbanisation-si.clairprev.limiteNombreAssure=3
-#Eureka
+# Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
