--- a/microservice-contrat.properties
+++ b/microservice-contrat.properties
@@ -1,4 +1,4 @@
-spring.application.name=microservice-contrat
+# spring.application.name=microservice-contrat
 server.port=9997
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -7,3 +7,5 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ref_contrat_db?s
 spring.datasource.username=user-contrat
 spring.datasource.password=root
 urbanisation-si.clairprev.limiteNombreContrat=3
+# Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
