--- a/microservice-produit.properties
+++ b/microservice-produit.properties
@@ -1,4 +1,4 @@
-spring.application.name=microservice-produit
+# spring.application.name=microservice-produit
 server.port=9998
 spring.datasource.url=jdbc:h2:mem:ref_produit_db
 spring.datasource.driverClassName=org.h2.Driver
@@ -8,3 +8,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 urbanisation-si.clairprev.limiteNombreProduit=3
+# Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
